--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: #050527;
+  padding: 4% 6%;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* height: 100vh;
+  padding: 50px 50px;
+  /* display: grid; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.main__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* grid-gap: 10px; */
+}
+.isError {
+  display: none;
+}
+.mobile__container {
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.pages__container {
+  width: 38vw;
+  overflow-y: scroll;
+  margin-bottom: 2%;
+  /* padding: 30px 20px; */
+}
+.pages__container::-webkit-scrollbar {
+  display: none;
+}
+.dynamic__container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media screen and (max-width: 990px) {
+  .main__container {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .mobile__container {
+    display: grid;
   }
+  .pages__container__mobile{
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    justify-content: space-between;
+  }
+  
 }
