--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -2,7 +2,6 @@
   background-color: #10105370;
   padding: 20px;
   color: rgba(255, 255, 255, 0.603);
-  
 }
 .myname {
   color: #fff;
@@ -15,13 +14,13 @@
 .resume__description {
   margin: 25px 0px;
 }
-.resume__description > .word {
+.resume__description > .word,
+.section__body {
   line-height: 1.5;
 }
 
 .section__body {
   margin: 15px 0px;
-  line-height: 1.5;
 }
 .education {
   color: #fff;
