--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,7 @@
   color: white;
   z-index: 1000;
 }
-.header__nav > .logo > img {
+img.my__logo {
   width: 8vw;
   object-fit: contain;
 }
@@ -46,20 +46,20 @@
 }
 
 @media screen and (max-width: 740px) {
-  .header__nav > .logo > img {
+  img.my__logo {
     width: 10vw;
     object-fit: contain;
   }
 }
 
 @media screen and (max-width: 559px) {
-  .header__nav > .logo > img {
+  img.my__logo {
     width: 68px;
     object-fit: contain;
   }
 }
 @media screen and (max-width: 470px) {
-  .header__nav > .logo > img {
+  img.my__logo {
     width: 50px;
     object-fit: contain;
   }
