--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -41,6 +41,9 @@
   margin-right: 10px;
   color: rgba(255, 255, 255, 0.9);
 }
+.familiar{
+  min-width: 85px;
+}
 .horizontal__line {
   width: 100%;
   height: 0.5px;
@@ -50,6 +53,23 @@
 .section__body a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.9);
+}
+
+div.job{ 
+  margin-bottom: 25px;
+}
+.job__title{
+  text-transform: capitalize;
+  color: white;
+}
+.job__title > span{
+  font-style: italic;
+}
+.job__duration{
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.9);;
 }
 
 @media screen and (max-width: 320px) {
