Added some chnages

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -16,6 +16,9 @@
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.5;
 }
+.home__intro__body > span{
+  color: #fff
+}
 
 button.explore__btn {
   color: #fff;
