--- a/src/components/Base/Base.css
+++ b/src/components/Base/Base.css
@@ -18,9 +18,14 @@
   margin-bottom: 20px;
 }
 .intro > .intro__body {
-  line-height: 1.5;
+  line-height: 1.7;
   color: rgba(255, 255, 255, 0.603);
 }
+
+.intro > .intro__body span{
+  color: white;
+}
+
 
 /* Active State */
 
@@ -67,7 +72,7 @@ ul li:hover > .width {
   text-decoration: none;
   color: white;
 }
-.icons__title:first-child {
+.icons__title{
   margin-right: 20px;
 }
 .icons__title:last-child {
