--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -3,6 +3,9 @@
   padding: 20px;
   color: rgba(255, 255, 255, 0.603);
 }
+.resume__header{
+  margin-bottom: 80px;
+}
 .myname {
   color: #fff;
   font-size: 40px;
@@ -70,6 +73,9 @@ div.job{
   margin-bottom: 10px;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.9);;
+}
+.about__job > span{
+  color: white;
 }
 
 @media screen and (max-width: 320px) {
